@@ -1,4 +1,5 @@
 # Dockerfile
 FROM openjdk:17-jdk-slim
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-XX:+UseZGC", "-Xmx512m", "-Xms512m", "-Xlog:gc", "-jar", "app.jar"]
+
